--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,6 +1,6 @@
 name: astrbot_plugin_memos_manager
 display_name: Memos Manager
-description: Manage usememos/memos with LLM tools (search/create/update/delete).
-version: 0.1
+description: 一个能对usememos/memos进行管理的插件
+version: 0.2
 author: astrbot_plugin_memos_manager
-repo: ""
+repo: "https://github.com/cyilin36/astrbot_plugin_memos_manager"
